[package]
name = "outcomes-lookup"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse-rs = "0.2.0-alpha.5"
tokio = { version = "0.2.21", features = ["macros", "rt-core"] }
uuid = "0.8.1"
argh = "0.1.3"
chrono = "0.4.11"
chrono-tz = "0.5.2"
